Closed
Bug 467141
Opened 17 years ago
Closed 17 years ago
"ASSERTION: failed to redistribute" with table-layout:fixed, width attributes
Categories
(Core :: Layout: Tables, defect)
Core
Layout: Tables
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: jruderman, Assigned: dbaron)
References
Details
(Keywords: assertion, testcase, verified1.9.1)
Attachments
(2 files)
|
183 bytes,
text/html
|
Details | |
|
5.36 KB,
patch
|
roc
:
review+
roc
:
superreview+
beltzner
:
approval1.9.1+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: failed to redistribute: 'unassignedSpace == 0', file /Users/jruderman/central/layout/tables/FixedTableLayoutStrategy.cpp, line 372
This assertion was added in bug 445142.
| Assignee | ||
Comment 1•17 years ago
|
||
Hmmm. So the problem is that I have an expression (a * b / c), and I want to ensure that if b==c, the result is *exactly* a, and if a==c, the result is *exactly* b. I can get one of the two by parenthesizing the division, but I can't get both. I guess we're losing here because the width is too large to be converted to float and back without losing precision.
| Assignee | ||
Comment 2•17 years ago
|
||
Actually, we don't care about that invariant both ways; it's only one way. So it's just a floating point issue.
| Assignee | ||
Comment 3•17 years ago
|
||
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Attachment #350561 -
Flags: superreview?(roc)
Attachment #350561 -
Flags: review?(roc)
Attachment #350561 -
Flags: superreview?(roc)
Attachment #350561 -
Flags: superreview+
Attachment #350561 -
Flags: review?(roc)
Attachment #350561 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Fixed on mozilla-central: http://hg.mozilla.org/mozilla-central/rev/fb1b3f68b09d
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
OS: Mac OS X → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
| Assignee | ||
Updated•17 years ago
|
Attachment #350561 -
Flags: approval1.9.1?
| Assignee | ||
Comment 5•17 years ago
|
||
Comment on attachment 350561 [details] [diff] [review]
patch
Simple fix for recent assertion regression which also fixes slight rounding errors in table width distribution for table-layout:fixed.
Comment 6•17 years ago
|
||
Comment on attachment 350561 [details] [diff] [review]
patch
a191=beltzner
Attachment #350561 -
Flags: approval1.9.1? → approval1.9.1+
| Assignee | ||
Comment 7•17 years ago
|
||
Fixed on 1.9.1: http://hg.mozilla.org/releases/mozilla-1.9.1/rev/9cc347dd89b8
Keywords: fixed1.9.1
Target Milestone: mozilla1.9.2a1 → mozilla1.9.1b3
Updated•17 years ago
|
Flags: in-testsuite+
Updated•17 years ago
|
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•