Fix slight errors when widths can't be round-tripped through floats.  (Bug 467141)  r+sr=roc